# 134-integrated-gradients-finance

./: README.md  README.ru.md  README.specify.md
python/: __init__.py  backtest.py  data_loader.py  integrated_gradients.py  trading_model.py
rust/: Cargo.toml  README.md
rust/src/: backtest.rs  data.rs  integrated_gradients.rs  lib.rs  model.rs
