[package]
name = "integrated_gradients_finance"
version = "0.1.0"
edition = "2021"
authors = ["ML4T Contributors"]
description = "Integrated Gradients for Financial Trading Models"
license = "MIT"
readme = "README.md"

[dependencies]
ndarray = { version = "0.16", features = ["rayon"] }
ndarray-rand = "0.15"
rand = "0.8"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.0", features = ["full"] }
reqwest = { version = "0.12", features = ["json"] }
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1.0"
thiserror = "2.0"

# Bybit client from templates
bybit_client = { path = "../../../.claude/rust_templates/bybit_client", optional = true }

[features]
default = ["bybit"]
bybit = ["bybit_client"]

[dev-dependencies]
criterion = "0.5"
approx = "0.5"

[[bench]]
name = "ig_benchmark"
harness = false

[[example]]
name = "btc_attribution"
required-features = ["bybit"]

[[example]]
name = "simple_ig"
